# aibookhack1

./: .dockerignore  .env.example  .gitignore  README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tsconfig.json
.claude/: settings.local.json
.specify/memory/: constitution.md
backend/: .env.example  main.py  pyproject.toml
chatbot/: .env.example  requirements.txt
chatbot/src/: __init__.py
chatbot/src/api/: __init__.py  main.py
chatbot/src/db/: __init__.py  neon.py  qdrant.py
chatbot/src/models/: __init__.py  chat.py  document.py
docs/: intro.md
docs/capstone/: _category_.json
docs/capstone-project/: introduction.md  phase-1-foundation.md  phase-2-perception.md
docs/capstone-project/week-13/: introduction.md
docs/capstone/week-13/: _category_.json
docs/lab-setup/: _category_.json  cloud-ether-lab.md  digital-twin-workstation.md  economy-jetson-kit.md  overview.md
docs/module-1-robotic-nervous-system/: _category_.json
docs/module-1-robotic-nervous-system/week-01/: _category_.json  exercise-first-node.md  introduction.md  nodes.md
docs/module-1-robotic-nervous-system/week-02/: services.md  (+3 more)
docs/module-2-digital-twin/: _category_.json
docs/module-3-ai-robot-brain/: _category_.json
docs/module-4-vision-language-action/: _category_.json
specs/001-physical-ai-robotics-book/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-rag-embeddings-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/css/: custom.css
src/pages/: index.module.css  index.tsx
(+73 files in other folders)
