[project]
name = "rag-embeddings-pipeline"
version = "0.1.0"
description = "Crawl Docusaurus sites, generate embeddings with Cohere, and store in Qdrant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.0",
    "cohere>=5.0.0",
    "qdrant-client>=1.12.0",
    "python-dotenv>=1.0.0",
]
